# FRGraph

./: README.md
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
devel/.private/catkin_simple/: .catkin  .rosinstall  local_setup.sh  setup.fish  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
devel/.private/decomp_ros_msgs/: .catkin  .rosinstall  local_setup.sh  setup.fish  setup.sh
devel/.private/decomp_ros_utils/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.sh
devel/.private/planner_manager/: .catkin
devel/.private/simple_robot/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.sh
devel/.private/velodyne_description/: .catkin  local_setup.fish  local_setup.sh
devel/.private/velodyne_gazebo_plugins/: .catkin  local_setup.sh  setup.sh
devel/include/decomp_ros_msgs/: Ellipsoid.h  EllipsoidArray.h  Polyhedron.h  PolyhedronArray.h
devel/lib/pkgconfig/: catkin_simple.pc  catkin_tools_prebuild.pc  decomp_ros_msgs.pc  decomp_ros_utils.pc  planner_manager.pc  simple_robot.pc  (+2 more)
logs/decomp_ros_msgs/: build.cmake.000.log.stderr
logs/decomp_ros_utils/: build.cmake.000.log.stderr
logs/planner_manager/: build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr
src/planner_manager/: CMakeLists.txt  package.xml
src/planner_manager/config/: config.yaml
src/planner_manager/include/: planner_manager.h  planner_manager_fsm.h
src/planner_manager/include/free_regions_graph/: free_regions_graph.h
src/planner_manager/include/gap_extractor/: gap_extractor.h
src/planner_manager/include/interesting_directions_extractor/: interesting_directions_extractor.h
src/planner_manager/include/math_utils/: min_enclosing_ball.h
src/planner_manager/include/trajectory_optimization/: continuous_violation.h  trajectory.h
src/planner_manager/launch/: planner.launch
src/planner_manager/msg/: GapCandidate.msg  GapCandidates.msg
src/planner_manager/src/: planner_manager.cpp  planner_manager_fsm.cpp
src/planner_manager/src/free_regions_graph/: free_regions_graph.cpp
src/planner_manager/src/gap_extractor/: gap_extractor.cpp
src/planner_manager/src/interesting_directions_extractor/: interesting_directions_extractor.cpp
src/planner_manager/src/trajectory_optimization/: continuous_violation.cpp
src/simple_robot/: CMakeLists.txt  package.xml
src/simple_robot/launch/: simple_robot.launch
src/simple_robot/rviz/: simple_robot.rviz
src/simple_robot/src/: interactive_marker.cpp  navi_goal_3d.py  simple_robot.cpp  simple_robot_controller.cpp
src/simple_robot/urdf/: scan2d.xacro  simple_robot.xacro  velodyne.xacro
src/simple_robot/worlds/: 2d_006.world  2d_008.world  2d_010.world  2d_012.world  3d.world  env3D.STL  sixboxes.world
(+75 files in other folders)
